# meowLang

./: .gitignore  CMakeLists.txt  Makefile  shell.nix
.cache/clangd/index/: ast.h.541311483FB9597A.idx  codegen.c.0C5F552B2E8BC138.idx  codegen.h.E959E29A33D1D8D7.idx  lexer.c.2E4E5B384653CECB.idx  lexer.h.07EF09CB3E80D4EF.idx  main.c.027226AC9AE6E816.idx  parser.c.79929208F5D77C13.idx  parser.h.C36F48255052FF42.idx  token.h.647548AF523F6445.idx
examples/: math.meow  return.meow  variables.meow
src/: ast.h  codegen.c  codegen.h  lexer.c  lexer.h  main.c  parser.c  parser.h  token.h
